force-app/main/default/objects/UsuarioSite__c/UsuarioSite__c.object-meta.xml
<CustomObject>
    <label>Usuário Site</label>
    <nameField>
        <label>Nome</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Usuários Site</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>