force-app/main/default/objects/UsuarioSite__c/fields/Conta__c.field-meta.xml
<CustomField>
    <fullName>Conta__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Conta</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Usuários Site</relationshipLabel>
    <relationshipName>UsuariosSite</relationshipName>
    <type>Lookup</type>
</CustomField>