force-app/main/default/objects/UsuarioSite__c/fields/IdSite__c.field-meta.xml
<CustomField>
    <fullName>IdSite__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Id do Site</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>