force-app/main/default/objects/UsuarioSite__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>IdSite__c</columns>
    <columns>Lead__c</columns>
    <columns>Conta__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>Tudo</label>
</ListView>